--- a/MovieList/Base.lproj/Main.storyboard
+++ b/MovieList/Base.lproj/Main.storyboard
@@ -2,13 +2,14 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="D0c-22-FAH">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Movie List-->
         <scene sceneID="g2w-tk-Fw0">
             <objects>
                 <tableViewController id="DRN-E4-gbg" customClass="TableTableViewController" sceneMemberID="viewController">
@@ -31,7 +32,7 @@
                             <outlet property="delegate" destination="DRN-E4-gbg" id="xvt-Ks-n3X"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="Yjd-yw-tf9"/>
+                    <navigationItem key="navigationItem" title="Movie List" id="Yjd-yw-tf9"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hLQ-vT-Ufn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
